--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/signOut"
         android:title="Sign Out" />
+    <item
+        android:id="@+id/aboutMe"
+        android:title="About Me" />
 </menu>
