--- a/app/src/main/res/menu/mymenu.xml
+++ b/app/src/main/res/menu/mymenu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/signOut"
@@ -7,4 +8,12 @@
     <item
         android:id="@+id/aboutMe"
         android:title="About Me" />
+    <item
+        android:id="@+id/chat_menu"
+        android:icon="@mipmap/ic_launcher_foreground_my"
+        android:title="Chat"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_profile"
+        android:title="Profile Settings" />
 </menu>
